--- a/app/views/drivers.html
+++ b/app/views/drivers.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid " ng-controller="DriverController" data-ng-init="year='2015'">
   <div class="row-fluid">
-    <h2 class="main-titling">Drivers Championship</h2>
+    <h2 class="main-titling">Drivers-Championship</h2>
 
     <div>
      <select ng-options="year for year in years" ng-model="year" ng-required ></select>
